[gd_scene load_steps=5 format=3 uid="uid://cy0rpdefr6q52"]

[ext_resource type="Script" path="res://UI.gd" id="1_k6inh"]
[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="2_2i62o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5prch"]
bg_color = Color(0.560784, 0, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pr2ut"]
bg_color = Color(0, 0.839216, 0.352941, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_k6inh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_2i62o")
theme_override_font_sizes/font_size = 32
text = "Lifes : 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5prch")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "You have Lost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Restart Game"

[node name="LevelWon" type="CenterContainer" parent="."]
visible = false
offset_left = 426.0
offset_top = 174.0
offset_right = 726.0
offset_bottom = 474.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWon"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pr2ut")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWon/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWon/Panel/VBoxContainer"]
layout_mode = 2
text = "You have won the level!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWon/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Next Level"

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
[connection signal="pressed" from="LevelWon/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="LevelWon/Panel/VBoxContainer/LevelWonButton" to="." method="_on_game_lost_button_pressed"]
